[gd_scene load_steps=8 format=3 uid="uid://hjm8mwte3gxx"]

[ext_resource type="PackedScene" uid="uid://bdg8c51i57cu8" path="res://modelTest4.glb" id="1_6a4ke"]
[ext_resource type="Script" uid="uid://ksm7xqwjqeff" path="res://machine.gd" id="1_13m1l"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_13m1l"]

[sub_resource type="Sky" id="Sky_q015e"]
sky_material = SubResource("ProceduralSkyMaterial_13m1l")

[sub_resource type="Environment" id="Environment_loq51"]
background_mode = 2
background_energy_multiplier = 4.0
sky = SubResource("Sky_q015e")

[sub_resource type="BoxShape3D" id="BoxShape3D_13m1l"]
resource_local_to_scene = true
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_q015e"]
size = Vector3(0.5, 0.5, 2.0410156)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_13m1l")

[node name="modelTest4" parent="." instance=ExtResource("1_6a4ke")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.12191856, 0, -0.7889309)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.95598274, 0.29342306, 0, -0.29342306, 0.95598274, 0.103523016, 0.10796991, -0.6408597)
fov = 51.71286

[node name="WorldEnvironment" type="WorldEnvironment" parent="Camera3D"]
environment = SubResource("Environment_loq51")

[node name="StaticBodyVert" type="StaticBody3D" parent="."]
transform = Transform3D(0.19883025, 0, 0, 0, 1, 0, 0, 0, 0.03470254, 0.110222936, 0.017476344, -0.7486145)

[node name="CollisionShapeVert" type="CollisionShape3D" parent="StaticBodyVert"]
transform = Transform3D(0.0940062, 0, 0, 0, 0.03066943, 0, 0, 0, 1.0439612, 0.011504054, 0.006407747, -0.303257)
shape = SubResource("BoxShape3D_13m1l")
debug_color = Color(0.22796345, 0.62537235, 0.37487236, 0.41960785)

[node name="StaticBodyRed" type="StaticBody3D" parent="."]
transform = Transform3D(0.08438861, 0, 0, 0, 0.33194685, 0, 0, 0, 0.014169395, 0.117445126, 0.018204689, -0.7470063)

[node name="CollisionShapeRed" type="CollisionShape3D" parent="StaticBodyRed"]
transform = Transform3D(1, 0, 0, 0, 1.0000002, 0, 0, 0, 1, 0.25644946, -0.0074990205, -0.7570801)
shape = SubResource("BoxShape3D_q015e")

[connection signal="input_event" from="StaticBodyVert" to="." method="_on_static_body_vert_input_event"]
[connection signal="input_event" from="StaticBodyRed" to="." method="_on_static_body_red_input_event"]
